* 2017.04.25 - added experimental mode to rebuild package without download (ck install package:{name} --rebuild)

* 2017.04.23 - added possibility to customize path during package installation (--path=)

* 2017.04.22 - fixed bug when detecting already installed via CK software (restoring tags!)

* 2017.04.21 - fixed recording of package UOA when automatically detecting allready installed soft (restoring env - needed for Caffe crowd-benchmarking)

* 2017.04.20 - added LMDB universal package (not completely working on Windows) ...

* 2017.04.19 - added adb.exe for Windows to os:windows-32

* 2017.04.18 - added package to automatically download and install GCC 6.3.0 for Windows
               (needed for OpenBLAS + Caffe)
             - added perl-strawberry-5.24.1.1-win (also for OpenBLAS on Windows)
             - added use_locale_for_version to detect Microsoft compiler version on non-English Windows
               (tested on French one)

* 2017.04.17 - added support for AMD OpenCL lib

* 2017.04.15 - moved many generic packages from ck-autotuning here
             - added LLVM 4.0.0 universal package (still need to fix for Linux)
             - fixed env refresh when extra package name is available (useful for caffe/tensorflow models)

* 2017.04.14 - fixed mingw gfortran detection on Windows (for Caffe)

* 2017.04.11 - improved LLVM description for Android targets

* 2017.03.28 - fixed java detection

* 2017.03.26 - added soft:env.msys2 needed by bazel for Windows (to build TensorFlow, etc)

* 2017.03.24 - added tag modification in deps for host/target OS
             - improved support for customized scripts in packages (to update URLs for ARM/Intel + Win/Linux/MacOS/Android)

* 2017.03.16 - added support for VS2017 Community eddition (cl + clang)
             - added support for PACKAGE_URL_MACOS and PACKAGE_GIT_CHECKOUT_MACOS in universal packages
             - improved universal scripts
             - added soft:compiler.perl (to compile OpenBLAS on Windows)