@@ -1,4 +1,5 @@
 * 2017.04.25 - added experimental mode to rebuild package without download (ck install package:{name} --rebuild)
+             - added ck xset env with default flags to quickly set env from command line (useful for caffe python)
 
 * 2017.04.23 - added possibility to customize path during package installation (--path=)
 
